# WorldEval

./: .env.example  .env.local.example  .gitignore  AGENTS.md  HOSTING_SERVER.md  README.md  agents.toml  env.example  evaluation.py  feature.md  gitignore  pyproject.toml  render_highlight_replay.command  run_fast_deterministic_tests.command  run_simulation.command  run_worldarena.command  worldeval.workspace.json
.github/workflows/: ci.yml  pages.yml
agents/: luna.md  sol.md  terra.md
apps/worldeval-web/: AGENTS.md  README.md  package.json  vite.config.ts
backend/genesis_arena/: __init__.py  arena_api.py  brain.py  config.py  evaluation.py  main.py  memory.py  models.py  orchestrator.py  season_cli.py
dashboard/: README.md  index.html  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  main-pages.tsx
deploy/: README.md
deploy/nginx/: worldeval-godot-demo.conf  worldeval-lab.conf
deploy/systemd/: worldeval-lab-api.service
docs/: CONQUEST_DESIGN_SYSTEM.md  HIGHLIGHT_EXPORT.md  LLM_CONTROLLER_WORLDARENA_CERTIFICATION.md  LLM_CONTROLLER_WORLDARENA_HYBRID_PRESENTATION.md  LLM_CONTROLLER_WORLDARENA_LIVE_SOLO.md  LLM_CONTROLLER_WORLDARENA_MANAGED_AUTHORITY.md  LLM_CONTROLLER_WORLDARENA_MVP.md  LLM_CONTROLLER_WORLDARENA_SOLO_MECHANICS.md  NAMING.md  NATIVE_MEDIA_EXPORT.md  RTS_REVAMP_RESEARCH.md  WORLDARENA_DUEL_DEDICATED_EXPORT.md  WORLDARENA_DUEL_IMPLEMENTATION_PLAN.md  WORLDARENA_DUEL_IMPLEMENTATION_SPEC.md  WORLDARENA_DUEL_MANAGED_AUTHORITY.md  WORLDARENA_DUEL_REPLAY_ARTIFACTS.md  architecture.md  season-spec.example.json
features/: README.md
game/: actions.json  arena_actions.json  controller.md
godot/: duel_dedicated_export_policy.json  project.godot
memory/: luna.json  sol.json  terra.json
ops/: README.md
remotion/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: build_demo_highlight.py  build_duel_map.py  build_duel_protocol_lock.py  build_embodiment_browser_qa_report.py  build_embodiment_protocol_lock.py  build_hosting_assets.sh  build_labyrinth_run_showcase.py  build_rts_showcase_artifacts.py  package_rts_showcase.py  promote_embodiment_mvp_release.py  render_crossroads_conquest_broadcast.py  render_worldarena_native_replay.py  run_arena_simulation.py  run_duel_headless_suite.py  run_embodiment_live_provider_pilot.py  run_embodiment_managed_soak.py  run_embodiment_mvp_certification.py  run_embodiment_openai_round_robin.py
tests/: __init__.py  helpers.py  test_brain.py  test_evaluation.py  test_memory.py  test_websocket.py
tools/: check_document_links.py  check_frozen_protocol_bytes.py  check_public_artifact_secrets.py  check_workspace_layout.py
worldeval/: AGENTS.md
(+1512 files in other folders)
