[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "genesis-arena"
version = "0.2.0"
description = "A deterministic 3D embodied-AI competition and evaluation benchmark."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "openai>=1.68,<3",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[project.scripts]
genesis-arena = "genesis_arena.main:run"
genesis-evaluate = "genesis_arena.evaluation:main"
genesis-season-schedule = "genesis_arena.season_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backend/genesis_arena"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP006", "UP007", "UP035"]
