[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "worldeval"
version = "0.3.0"
description = "Reusable evaluation contracts with the deterministic WorldArena environment."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jsonschema>=4.24.1,<4.26",
  "openai>=1.68,<3",
  "pillow==11.3.0",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[project.scripts]
worldeval = "worldeval.cli:main"
worldeval-feature = "worldeval.features.cli:main"
worldarena = "worldarena.main:run"
genesis-arena = "genesis_arena.main:run"
genesis-evaluate = "genesis_arena.evaluation:main"
genesis-season-schedule = "genesis_arena.season_cli:main"

[tool.hatch.build.targets.wheel]
packages = [
  "worldeval/src/worldeval",
  "worlds/worldarena/backend/worldarena",
  "worlds/worldarena/backend/genesis_arena",
]

[tool.hatch.build.targets.wheel.force-include]
"worldeval/protocols" = "worldeval/protocols"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["worldeval/tests", "worlds/worldarena/tests"]
pythonpath = ["worldeval/src", "worlds/worldarena/backend"]
asyncio_mode = "auto"
markers = [
  "live_provider: opt-in external provider smoke test requiring explicit key and model env vars",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP006", "UP007", "UP035"]
